fix visual bug with hand cursor in toolbar when not visible

--- a/src/ui/Header/index.scss
+++ b/src/ui/Header/index.scss
@@ -226,6 +226,10 @@ $font-size-quiz: 20px;
       opacity: 0;
       transition: opacity 0.3s;
       display: flex;
+
+      .TooltipButton {
+        cursor: default;
+      }
     }
   }
 
